email selection style

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -96,6 +96,10 @@ li button {
   text-align: left;
 }
 
+.mail-selected {
+  background-color: #F9F9F9 !important;
+}
+
 .contact {
   font-weight: bold;
 }
