--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -12,6 +12,7 @@ body {
   left: 0;
   overflow-x: hidden;
   transition: 0.5s;
+  border-right: solid 1px #B5B5B5;
 }
 
 .page-bg {
@@ -94,6 +95,10 @@ li button {
   font-size: 12px;
   border-bottom: solid 1px #B5B5B5;
   text-align: left;
+}
+
+li button:focus {
+  outline:0;
 }
 
 .mail-selected {
