--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -97,6 +97,11 @@ li button {
   text-align: left;
 }
 
+li button > img {
+  float: left;
+  margin: 0 5px 0 12px;
+}
+
 li button:focus {
   outline:0;
 }
