--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -25,6 +25,39 @@ button:focus {
   border-right: solid 1px #B5B5B5;
 }
 
+.sidenav-header {
+  margin: 0;
+  padding: 5px;
+  height: 40px;
+  border-bottom: solid 2px #B5B5B5;
+}
+
+.sidenav-list-empty {
+  width: 320px;
+  text-align: center;
+  margin-top: 40px;
+  color: #B6B6B5;
+}
+
+.sidenav-header-item {
+  padding: 13px 8px;
+  font-size: 10px;
+  display: flex;
+  float: right;
+}
+
+.sidenav-header-item .selected {
+  color: #4990E2;
+}
+
+.sidenav-header-item div {
+  margin-right: 5px;
+}
+
+.sidenav-header-item div:last-child {
+  margin-top: 1px;
+}
+
 .page-bg {
   height: 100%;
   padding-left: 40px;
